Bug 387463 - Wrong mountpoint creation
Summary: Wrong mountpoint creation
Status: RESOLVED FIXED
Alias: None
Product: partitionmanager
Classification: Applications
Component: general (other bugs)
Version First Reported In: 3.2
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Andrius Štikonas
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-11-30 09:56 UTC by Mattia
Modified: 2017-11-30 23:40 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 3.3.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mattia 2017-11-30 09:56:41 UTC
After creating a new partition formatted as FAT16 or FAT32, if you select to edit the mountpoint, partitionmanager creates an entry in /etc/fstab with type fat16 or fat32, which leads to a "unknown filesystem type 'fat16'" or "unknown filesystem type 'fat32'" error when trying to mount it. It should be a vfat mountpoint.
Original bug was reported on Fedora: https://bugzilla.redhat.com/show_bug.cgi?id=1517718

I also verified that if you change the filesystem from fat16 to fat32 or viceversa and then you edit the mountpoint, the type in fstab entry is not updated.
Comment 1 Andrius Štikonas 2017-11-30 23:34:53 UTC
Git commit d4c72ad075c3d099f312e1dfe0d5a1607b38b4b7 by Andrius Štikonas.
Committed on 30/11/2017 at 23:33.
Pushed by stikonas into branch 'master'.

Fix creation of FAT mountpoints.

M  +13   -2    src/gui/editmountpointdialogwidget.cpp

https://commits.kde.org/partitionmanager/d4c72ad075c3d099f312e1dfe0d5a1607b38b4b7