Fix creation of FAT mountpoints.

BUG: 387463